--- a/client/angular.json
+++ b/client/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/NotoSansCJKtc-Black.otf"],
             "styles": ["src/styles.css"],
             "scripts": []
           },
