--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@aspnet/signalr": "^1.0.0-preview2-final",
+    "@aspnet/signalr": "^1.0.0-rc1-update1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
