--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@aspnet/signalr": "^1.0.0-rc1-update1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "sha.js": "^2.4.11",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
