add remote module

--- a/client/angular.json
+++ b/client/angular.json
@@ -101,5 +101,10 @@
       }
     }
   },
-  "defaultProject": "client"
+  "defaultProject": "client",
+  "schematics": {
+    "@schematics/angular:module": {
+      "spec": false
+    }
+  }
 }
