--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/router": "^6.0.1",
     "@aspnet/signalr": "^1.0.0-rc1-update1",
+    "@ngxs/store": "^3.0.1",
+    "angularfire2": "^5.0.0-rc.8.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.0.2",
     "rxjs": "^6.0.0",
     "sha.js": "^2.4.11",
     "zone.js": "^0.8.26"
