--- a/client/angular.json
+++ b/client/angular.json
@@ -18,7 +18,11 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets", "src/NotoSansCJKtc-Black.otf"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/NotoSansCJKtc-Black.otf"
+            ],
             "styles": ["src/styles.css"],
             "scripts": []
           },
@@ -66,6 +70,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
+            "environment": "src/environments/environment.ts",
             "styles": ["styles.css"],
             "scripts": [],
             "assets": ["src/favicon.ico", "src/assets"]
