--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.0.2",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.1.0",
     "sha.js": "^2.4.11",
     "zone.js": "^0.8.26"
   },
