--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "electron": "^2.0.1",
     "firebase": "^5.0.2",
+    "ng2-ace-editor": "^0.3.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
     "sha.js": "^2.4.11",
