--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.1",
-    "@angular/common": "^6.0.1",
-    "@angular/compiler": "^6.0.1",
-    "@angular/core": "^6.0.1",
-    "@angular/forms": "^6.0.1",
-    "@angular/http": "^6.0.1",
-    "@angular/platform-browser": "^6.0.1",
-    "@angular/platform-browser-dynamic": "^6.0.1",
-    "@angular/router": "^6.0.1",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "@aspnet/signalr": "^1.0.0-rc1-update1",
     "@ngxs/store": "^3.0.1",
     "angular2-template-loader": "^0.6.2",
-    "angularfire2": "^5.0.0-rc.8.0",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
     "electron": "^2.0.1",
-    "firebase": "^5.0.2",
+    "firebase": "^5.0.4",
+    "jasmine": "^3.1.0",
     "ng2-ace-editor": "^0.3.7",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
     "sha.js": "^2.4.11",
     "wallaby-webpack": "^3.9.8",
@@ -36,9 +37,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "^6.0.1",
-    "@angular/compiler-cli": "^6.0.1",
-    "@angular/language-service": "^6.0.1",
+    "@angular/cli": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -53,6 +54,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.7.2"
   }
 }
