--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^6.0.5",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@ngxs/devtools-plugin": "^3.0.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
