--- a/stream-tools.csproj
+++ b/stream-tools.csproj
@@ -10,8 +10,9 @@
 
   <ItemGroup>
    <PackageReference Include="IdentityServer4" Version="2.2.0" />
-   <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0-rc1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-rc1-final" />
+   <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
+   <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
