remove unwant package

--- a/stream-tools.csproj
+++ b/stream-tools.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>3940a2f3-60eb-40b4-a610-69ca56ba357d</UserSecretsId>
+    <AssemblyName>stream_tools</AssemblyName>
+    <RootNamespace>stream_tools</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +13,6 @@
 
   <ItemGroup>
    <PackageReference Include="IdentityServer4" Version="2.2.0" />
-   <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
