--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@aspnet/signalr": "^1.0.0-rc1-update1",
+    "@aspnet/signalr": "^1.0.0",
     "@ngxs/store": "^3.0.1",
     "angular2-template-loader": "^0.6.2",
     "angularfire2": "^5.0.0-rc.10",
