--- a/stream-tools.csproj
+++ b/stream-tools.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
    <PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0-preview1-10009" />
   </ItemGroup>
 
 </Project>
